<resources>
    <string name="app_name">ImageSearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Enter search query...</string>
    <string name="button_search">Search</string>
    <string name="title_activity_full_image">FullImageActivity</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="image_size_text">Image Size</string>
    <string name="color_filter_text">Color Filter</string>
    <string name="image_type_text">Image Type</string>
    <string name="site_filter_text">Site Filter</string>
    <string name="button_save">SAVE</string>
    <string name="button_cancel">CANCEL</string>
</resources>
